# advent_of_code

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  environment.yml  index.html  objects.inv  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  release.yml
CLI/: index.html
archive/2021/.devcontainer/: Dockerfile
archive/2021/src/advent_of_code/day1/: part1.py
archive/2021/src/advent_of_code/day2/: part2.py
archive/2021/src/advent_of_code/day3/: part1.py  part2.py
archive/2021/src/advent_of_code/day4/: part1.py
archive/2021/src/advent_of_code/day5/: part1.py
archive/2021/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day6.py  test_day7.py
archive/2022/: pyproject.toml
archive/2022/.devcontainer/: devcontainer.json
archive/2022/src/advent_of_code/day1/: part2.py
archive/2022/src/advent_of_code/day10/: part2.py
archive/2022/src/advent_of_code/day2/: part1.py  part2.py
archive/2022/src/advent_of_code/day3/: part1.py
archive/2022/src/advent_of_code/day4/: part1.py  part2.py
archive/2022/src/advent_of_code/day5/: part1.py
archive/2022/src/advent_of_code/day6/: part1.py  part2.py
archive/2022/src/advent_of_code/day7/: part1.py
archive/2022/src/advent_of_code/day8/: part1.py  part2.py
archive/2022/src/advent_of_code/day9/: part1.py  part2.py
archive/2022/tests/: test_day1.py  test_day10.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day8.py  test_day9.py
day1/: day1_part1.py  day1_part2.py  test_day1.py
day1/part1/: index.html
day1/part2/: index.html
day2/part1/: index.html
day2/part2/: index.html
day3/part1/: index.html
day3/part2/: index.html
day4/part1/: index.html
day4/part2/: index.html
day5/part1/: index.html
docs/: mkdocs.yml
docs/docs/: CLI.md  index.md
docs/docs/day1/: part1.md  part2.md
docs/docs/day2/: part1.md  part2.md
docs/docs/day3/: part1.md  part2.md
docs/docs/day4/: part1.md  part2.md
docs/docs/day5/: part1.md
docs/docs/js/: custom.js
docs/docs/stylesheets/: custom.css
search/: search_index.json
src/advent_of_code/day1/: part1.py  part2.py
src/advent_of_code/day10/: part1.py  part2.py
src/advent_of_code/day2/: part1.py
src/advent_of_code/day3/: part2.py
src/advent_of_code/day4/: part2.py
src/advent_of_code/day5/: part1.py  part2.py
src/advent_of_code/day6/: part1.py
src/advent_of_code/day7/: part1.py  part2.py
src/advent_of_code/day9/: part2.py
src/aoc/: cli.py
src/aoc/day1/: part1.py  part2.py
src/aoc/day2/: part1.py  part2.py
src/aoc/day3/: part1.py  part2.py
src/aoc/day4/: part1.py  part2.py
src/aoc/day5/: part1.py
stylesheets/: extra.css  termynal.css
tests/: conftest.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py
