[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Colin Sullivan <csullivan@brandwatch.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pipe = "^2.0"
pandas = "^1.5.2"
numpy = "^1.23.5"
rich = "^12.6.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
