[tool.poetry]
name = "aoc"
version = "0.4.0"
description = "Record of current and past attempts at Advent-of-Code in Python"
authors = ["Colin Sullivan <csullivan@brandwatch.com>"]
readme = "README.md"

[tool.poetry.scripts]
aoc = 'aoc.cli:cli'

[tool.poetry.dependencies]
python = "^3.11.0"
pandas = "^2.1.3"
pydantic = "^2.5.2"
typer = { extras = ["all"], version = "^0.7.0" }
rich = "^12.6.0"
polars = "^0.19.19"
annotated-types = "^0.6.0"


[tool.poetry.group.dev.dependencies]
mypy = {extras = ["reports"], version = "^1.7.1"}
mkdocs-material = "^9.4.14"
pytest-html = "^4.1.1"
pre-commit = "^3.5.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
ruff = "^0.1.6"
typer-cli = "^0.0.13"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"
exclude = "archive"

[tool.pytest.ini_options]
addopts = "--ignore=archive"

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
fail_under = 90

[tool.coverage.run]
parallel = true
dynamic_context = "test_function"
source = ["aoc"]
omit = ["cli.py"]

[tool.coverage.paths]
source = ["src/aoc", "*/aoc", "*\\aoc"]

[tool.ruff]
exclude = ["docs", "archive"]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF100", # enforce that your noqa directives are "valid"
]
target-version = "py311"

[tool.ruff.per-file-ignores]
"src/aoc/cli.py" = [
    "UP007",
] # Prevents rewriting `Optional[X]` to `X | None` which isn't supported yet in Typer.

[tool.ruff.isort]
known-first-party = ["aoc"]
